# TaskFlow

./: .dockerignore  .gitignore  .prettierrc  CHAT.html  Dockerfile  FLATPAK_UPDATE_SYSTEM.md  README.md  angular.json  build-optimized.cmd  build-optimized.sh  com.tcs.taskflow.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json
src-tauri/: .env  .env.example  .taurignore  Cargo.toml  cargo_check.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mcp-bridge.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  logger.rs  main.rs  relations.rs
src-tauri/src/commands/: admin.command.rs  archive.command.rs  auth.command.rs  category.command.rs  chat.command.rs  comment.command.rs  crud_command.rs  daily_activity.command.rs  group.command.rs  macros.rs  mod.rs  profile.command.rs  room.command.rs  stats.command.rs  subtask.command.rs  task.command.rs  todo.command.rs  update.command.rs  user.command.rs
src-tauri/src/controllers/: about.controller.rs  about.rs  about_controller.rs  auth.controller.rs  auth.rs  auth_controller.rs  category.controller.rs  category_controller.rs  manage_db.controller.rs  mod.rs  profile.controller.rs  profile_controller.rs  statistics.controller.rs  subtask.controller.rs  subtask_controller.rs  task.controller.rs  task_controller.rs  task_shares.controller.rs  task_shares_controller.rs  todo.controller.rs  todo_controller.rs
src-tauri/src/entities/: category.entity.rs  chat.entity.rs  comment.entity.rs  daily_activity.entity.rs  email_config.entity.rs  group.entity.rs  login_form.entity.rs  mod.rs  notification.entity.rs  password_reset.entity.rs  pending_request.entity.rs  permission.entity.rs  profile.entity.rs  provider_type.entity.rs  relation_config.entity.rs  relation_config.rs  relation_obj.entity.rs  response.entity.rs  room.entity.rs  signup_form.entity.rs  statistics.entity.rs  subtask.entity.rs  sync_metadata.entity.rs  table.entity.rs  task.entity.rs  todo.entity.rs  traits.entity.rs  user.entity.rs  websocket.entity.rs
src-tauri/src/errors/: api_error.error.rs  api_error.rs  app_error.rs  mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/helpers/: activity_log.helper.rs  auth_helper.rs  bson.helper.rs  cascade_helper.rs  collection_metadata.helper.rs  common.helper.rs  common.rs  comparison.helper.rs  config.helper.rs  crypto_helper.rs  date.helper.rs  db.helper.rs  dual_write_helper.rs  email.provider.rs  filter.helper.rs  filter_builder.helper.rs  index.helper.rs  json.provider.rs  logging.helper.rs  mod.rs  model_helper.rs  mongodb.provider.rs  mongodb.rs  mongodb_provider.rs  orm_wrapper.helper.rs  parse.helper.rs  profile.helper.rs  projection.helper.rs  qr.helper.rs  relation_stripper.helper.rs  response.helper.rs  security.helper.rs  sled_provider.rs  soft_delete.helper.rs  statistics_aggregation.helper.rs  timestamp.helper.rs  user-sync.helper.rs  user_sync.helper.rs  visibility.helper.rs
src-tauri/src/models/: category.model.rs  category_model.rs  chat.model.rs  comment.model.rs  daily_activity.model.rs  email_config.model.rs  list_models.rs  login_form.model.rs  mod.rs  mongo_config.rs  password_reset.model.rs  profile.model.rs  profile.rs  profile_model.rs  provider_type.model.rs  relation_config.model.rs  relation_obj.model.rs  relation_obj_models.rs  response.model.rs  response.rs  signup_form.model.rs  signup_form.rs  statistics.model.rs  subtask.model.rs  subtask.rs  subtask_model.rs  sync_metadata.model.rs  table.model.rs  task.model.rs  task.rs  task_model.rs  task_shares.model.rs  task_shares_model.rs  todo.model.rs  todo.rs  todo_model.rs  traits.model.rs  user.model.rs  user.rs  user_model.rs  (+1 more)
src-tauri/src/orm_adapters/: conversions.rs  json.rs  mod.rs  mongo.rs
src-tauri/src/providers/: base_crud.provider.rs  data.provider.rs  email.provider.rs  json.provider.rs  json_crud.provider.rs  json_relations.provider.rs  json_sync.provider.rs  mod.rs  mongodb.provider.rs  mongodb_crud.provider.rs  mongodb_relations.provider.rs  mongodb_sync.provider.rs  pool_provider.rs  relation_loader.provider.rs
src-tauri/src/repositories/: base.repository.rs  data.repository.rs  email.repository.rs  mod.rs  nosql_repository.rs  routed.repository.rs  routed_repository.rs
src-tauri/src/routes/: about.route.rs  about_route.rs  admin.command.rs  admin.route.rs  archive.route.rs  auth.command.rs  auth.route.rs  auth_data_sync.route.rs  auth_route.rs  cascade.route.rs  category.route.rs  category_route.rs  chat.route.rs  comment.route.rs  crud_helpers.rs  crud_routes.rs  github.route.rs  group.command.rs  group.route.rs  macros.rs  manage_db.route.rs  mod.rs  profile.route.rs  profile_route.rs  room.command.rs  room.route.rs  statistics.route.rs  stats.command.rs  subtask.route.rs  subtask_route.rs  task.route.rs  task_route.rs  task_shares.route.rs  task_shares_route.rs  todo.command.rs  todo.route.rs  todo_permissions.route.rs  todo_route.rs  update.route.rs  user.route.rs
src-tauri/src/services/: about.rs  (+65 more)
src-tauri/tests/: relation_loading_test.rs
(+1100 files in other folders)
