[package]
authors = ["Dmitriy303"]
description = "Task Flow"
edition = "2021"
license = "MIT License"
name = "taskflow"
repository = "https://github.com/rusnakdima/TaskFlow"
version = "0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "taskflow_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3.1"
mongodb = "3.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.26"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2.5.1"
tauri-plugin-opener = "2"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
open = "5"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
