[package]
authors = ["Dmitriy303"]
description = "Task Flow"
edition = "2021"
license = "MIT License"
name = "taskflow"
repository = "https://github.com/rusnakdima/TaskFlow"
version = "0.13.1"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "taskflow_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bcrypt = "0.17.0"
async-trait = "0.1.86"
chrono = "0.4.41"
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3.1"
mongodb = "3.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
tokio-tungstenite = "0.26"
tauri = { version = "~2.10", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-mcp-bridge = "0.11"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
open = "5"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }
totp-rs = { version = "1", default-features = false, features = ["otpauth"] }
base32 = "0.5"
base64 = "0.13"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
data-encoding = "2"
# Use vendored OpenSSL for all platforms including Android
rustls = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
keyring = { version = "3", features = [] }

nosql_orm = { path = "/mnt/Other/Projects/Rust/nosql_orm", features = ["json", "mongo", "query_cache"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
