[package]
authors = ["Dmitriy303"]
description = "Task Flow"
edition = "2021"
license = "MIT License"
name = "taskflow"
repository = "https://github.com/TechCraft-Solutions/TaskFlow"
version = "0.18.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "taskflow_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bcrypt = "0.17.0"
async-trait = "0.1.86"
chrono = "0.4.41"
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = { version = "0.3", features = ["io"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
mongodb = "3.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.11"
tokio-tungstenite = "0.26"
tauri = { version = "~2.11", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
open = "5"
regex = "1"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
totp-rs = { version = "1", default-features = false, features = ["otpauth"] }
base32 = "0.5"
data-encoding = "2"
qrcode = "0.14"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-shell = "2"
ts-rs = "12.0.1"

nosql_orm = { git = "https://github.com/rusnakdima/nosql_orm", branch = "main", features = ["json", "mongo", "query_cache", "validators"] }
# nosql_orm = { path = "/mnt/Other/Projects/Rust/nosql_orm", features = ["json", "mongo", "query_cache", "validators"] }
# nosql_orm = { path = "C:\\Users\\D.Rusnak\\Projects\\nosql_orm", features = ["json", "mongo", "query_cache", "validators"] }

[features]
default = ["custom-protocol", "embedded_env"]
custom-protocol = ["tauri/custom-protocol"]
embedded_env = []

[dev-dependencies]
tempfile = "3"
serde_json = "1"
